applications/whoami/whoami-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-ingress
#  namespace: default
  annotations:
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - whoami.home.lednakirf.nl
      secretName: tls-whoami-ingress-dns
  rules:
    - host: whoami.home.lednakirf.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whoami-service
                port:
                  number: 80
                  name: web
